# wordreference

./: README.md  pyproject.toml
wordreference/: cli.py  main.py  wordreference.py
