[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordreference"
version = "0.1.0"
description = "Retrieve word information from WordReference"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
]

[project.scripts]
wordreference = "wordreference.main:main"
